Fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,6 @@ p {
 
 .StepHeader {
   /* text-align: center; */
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 /*End of Step 1*/
